--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "TransMultiRank"
+name = "transformer-doc-ranker"
 authors = [
     {name = "Bohdan Babii", email = "bohdanbabii@protonmail.com"}
 ]
-description = "Transformer for Multi-Task Ranking"
+description = "Transformer for document ranking"
 version = "0.0.1"
 readme = "README.md"
 requires-python = ">=3.9"
@@ -25,4 +25,4 @@ build-backend = "setuptools.build_meta"
 transmultirank = "TransMultiRank.cli:app"
 
 [tool.setuptools.packages.find]
-include = ["TransMultiRank", "TransMultiRank.*"]
+include = ["transformer-doc-ranker", "transformer-doc-ranker.*"]
